--- a/privacy.html
+++ b/privacy.html
@@ -28,9 +28,17 @@
         This data is used by Cloudflare for legitimate operational purposes such as traffic routing, load balancing, performance optimization, threat detection, and analytics.
 
         Cloudflare acts as a data processor in this context and their data handling practices are governed by their own Privacy Policy.
+
+        <br />
+
+        Cloudflare's Privacy Policy:
+        <a href="https://www.cloudflare.com/privacypolicy/">https://www.cloudflare.com/privacypolicy/</a>
+
         <li> Use of Your Information</li>
 
-        Nodeflow does not collect, store, or use your personal data. Since all hosting and analytic functionality is handled by Cloudflare, any information collected through your interaction with the Website is used solely by Cloudflare for:
+        Nodeflow does not collect, store, or use your personal data.
+
+        Since all hosting and analytic functionality is handled by Cloudflare, any information collected through your interaction with the Website is used solely by Cloudflare for:
 
         Monitoring and improving network performance
 
@@ -41,12 +49,15 @@
         Ensuring availability and uptime of our Services
 
         We do not have direct access to raw analytics or personal identifiers collected by Cloudflare, nor do we aggregate or attempt to re-identify any such data.
+
         <li> Sharing of Information</li>
 
         Since Nodeflow does not collect or store any user data, we do not sell, rent, or share your personal information with any third parties.
 
         Cloudflare may share data it collects with third parties only under certain conditions, such as to comply with legal obligations, or with service providers who are contractually obligated to protect the data. Please refer to Cloudflare’s policies for full details.
         <li> Data Retention</li>
+
+        This application may use some features that read and write to the broswer's local storage, but any information will not be personal information, and will be used for the user's convenience.
 
         Nodeflow retains no user data, personally identifiable information, or tracking logs.
 
@@ -95,7 +106,8 @@
         <br />
         Email: spira@nodeflow.net
         <br />
-        Website: https://gradtool.nodeflow.net
+        Website:
+        <a href="https://spiral.nodeflow.net">https://spiral.nodeflow.net</a>
 
     </ol>
 
