--- a/index.html
+++ b/index.html
@@ -24,6 +24,72 @@
                 <div id="templateList" class="template-list scrollable"></div>
             </div>
 
+
+            <div class="layer-controls preview-actions">
+                <details id="randomizerSettingsPanel" class="animated-border-box">
+                    <summary class="random-summary">🎲 Randomizer Settings</summary>
+                    <div class="randomizer-settings">
+                        <hr />
+                        <label>
+                            Layer Count:
+                            <input type="number" id="randLayerMin" value="1" min="1" max="10"> –
+                            <input type="number" id="randLayerMax" value="3" min="1" max="10">
+                        </label>
+
+                        <label style="margin-left:10px;">
+                            Color Stops:
+                            <input type="number" id="randStopMin" value="2" min="2" max="10"> –
+                            <input type="number" id="randStopMax" value="5" min="2" max="10">
+                        </label>
+
+                        <hr />
+                        <label>
+                            Allowed Gradient Types:
+                            <label><input type="checkbox" class="randType" value="linear" checked> Linear</label>
+                            <label><input type="checkbox" class="randType" value="radial" checked> Radial</label>
+                            <label><input type="checkbox" class="randType" value="conic" checked> Conic</label>
+                        </label>
+
+                        <hr />
+                        <label>
+                            Animation Chance (%):
+                            <input type="number" id="randAnimChance" value="60" min="0" max="100">
+                        </label>
+
+                        <label style="margin-left:20px;">
+                            Duration Range:
+                            <input type="number" id="randDurMin" value="2" min="0.01" max="10000"> –
+                            <input type="number" id="randDurMax" value="5" min="0.01" max="20000">
+                        </label>
+                        <br />
+                        <label>
+                            Include Animations:
+                            <label><input type="checkbox" class="randAnim" value="rotate" checked> Rotate</label>
+                            <label><input type="checkbox" class="randAnim" value="pulse" checked> Pulse</label>
+                            <label><input type="checkbox" class="randAnim" value="blur" checked> Blur</label>
+                            <label><input type="checkbox" class="randAnim" value="hue" checked> Hue</label>
+                            <label><input type="checkbox" class="randAnim" value="scale" checked> Scale</label>
+                            <label><input type="checkbox" class="randAnim" value="saturation" checked> Saturation</label>
+                        </label>
+                        <hr />
+
+                        <label>
+                            Opacity Range:
+                            <input type="number" id="randOpacityMin" value="0.2" step="0.1" min="0" max="1"> –
+                            <input type="number" id="randOpacityMax" value="1" step="0.1" min="0" max="1">
+                        </label>
+                        <label style="margin-left:10px;">
+                            Blur Range:
+                            <input type="number" id="randBlurMin" value="0" step="0.5"> –
+                            <input type="number" id="randBlurMax" value="200" step="0.5">
+                        </label>
+                        <hr />
+                        <button onclick="generateRandomGradientFromSettings()" style="margin-left: 0.5rem; margin-bottom: 0.5rem; background: linear-gradient( 90deg, rgba(255, 0, 204, 0.5), rgba(51, 51, 255, 0.5), rgba(0, 255, 238, 0.5), rgba(255, 204, 0, 0.49), rgba(255, 0, 204, 0.5) ); ">🎲 Generate Gradient</button>
+                    </div>
+                </details>
+            </div>
+
+
             <div id="previewWindow" class="pinned">
                 <div id="previewHeader" class="">
                     <span class="" tabindex="0">
@@ -84,72 +150,10 @@
                     </span>
                 </button>
                 <button onclick="generateSVG()">Generate SVG</button>
-                <button onclick="generateRandomGradient()" style="background: linear-gradient( 90deg, rgba(255, 0, 204, 0.5), rgba(51, 51, 255, 0.5), rgba(0, 255, 238, 0.5), rgba(255, 204, 0, 0.49), rgba(255, 0, 204, 0.5) ); "> 🎲 Random Gradient</button>
                 <!--<button onclick="toggleRandomMenu()">Randomizer Settings</button>-->
                 <!--<button onclick="toggleRandomMenu()">Randomizer Settings</button>-->
                 <!--<button onclick="createimage()">Create Image</button>-->
 
-                <details id="randomizerSettingsPanel" class="animated-border-box">
-                    <summary class="random-summary">🎲 Randomizer Settings</summary>
-                    <div class="randomizer-settings">
-                        <hr />
-                        <label>
-                            Layer Count:
-                            <input type="number" id="randLayerMin" value="1" min="1" max="10"> –
-                            <input type="number" id="randLayerMax" value="3" min="1" max="10">
-                        </label>
-
-                        <label style="margin-left:10px;">
-                            Color Stops:
-                            <input type="number" id="randStopMin" value="2" min="2" max="10"> –
-                            <input type="number" id="randStopMax" value="5" min="2" max="10">
-                        </label>
-
-                        <hr />
-                        <label>
-                            Allowed Gradient Types:
-                            <label><input type="checkbox" class="randType" value="linear" checked> Linear</label>
-                            <label><input type="checkbox" class="randType" value="radial" checked> Radial</label>
-                            <label><input type="checkbox" class="randType" value="conic" checked> Conic</label>
-                        </label>
-
-                        <label style="margin-left:20px;">
-                            Duration Range:
-                            <input type="number" id="randDurMin" value="2" min="0.01" max="10000"> –
-                            <input type="number" id="randDurMax" value="5" min="0.01" max="20000">
-                        </label>
-
-                        <hr />
-                        <label>
-                            Animation Chance (%):
-                            <input type="number" id="randAnimChance" value="60" min="0" max="100">
-                        </label>
-
-                        <label>
-                            Include Animations:
-                            <label><input type="checkbox" class="randAnim" value="rotate" checked> Rotate</label>
-                            <label><input type="checkbox" class="randAnim" value="pulse" checked> Pulse</label>
-                            <label><input type="checkbox" class="randAnim" value="blur" checked> Blur</label>
-                            <label><input type="checkbox" class="randAnim" value="hue" checked> Hue</label>
-                            <label><input type="checkbox" class="randAnim" value="scale" checked> Scale</label>
-                            <label><input type="checkbox" class="randAnim" value="saturation" checked> Saturation</label>
-                        </label>
-                        <hr />
-
-                        <label>
-                            Opacity Range:
-                            <input type="number" id="randOpacityMin" value="0.2" step="0.1" min="0" max="1"> –
-                            <input type="number" id="randOpacityMax" value="1" step="0.1" min="0" max="1">
-                        </label>
-                        <label style="margin-left:10px;">
-                            Blur Range:
-                            <input type="number" id="randBlurMin" value="0" step="0.5"> –
-                            <input type="number" id="randBlurMax" value="6" step="0.5">
-                        </label>
-                        <hr />
-                        <button onclick="generateRandomGradientFromSettings()" style="margin-left: 0.5rem; margin-bottom: 0.5rem; background: linear-gradient( 90deg, rgba(255, 0, 204, 0.5), rgba(51, 51, 255, 0.5), rgba(0, 255, 238, 0.5), rgba(255, 204, 0, 0.49), rgba(255, 0, 204, 0.5) ); ">🎲 Generate with Settings</button>
-                    </div>
-                </details>
 
             </div>
             <div class="textarea-wrapper">
@@ -191,7 +195,7 @@
                 <!--<button onclick="saveToTemplates()">Save as Template</button>-->
                 <!--<button onclick="copyLayer()">Copy Layer</button>-->
                 <!--<button onclick="moveLayerUp()">Move Up</button>
-                <button onclick="moveLayerDown()">Move Down</button>-->
+        <button onclick="moveLayerDown()">Move Down</button>-->
                 <!--<button onclick="generateCSS()">Generate & Show CSS</button>-->
                 <!--<button onclick="exportConfig()">Export</button>-->
                 <!--<button onclick="importConfig()">Import</button>-->
@@ -233,7 +237,7 @@
                                         </div>
                                     </div>
                                 </span>
-                                <input type="range" id="layerBlur" min="0" max="10" step="0.5" onchange="updateCurrentLayer()">
+                                <input type="number" id="layerBlur" min="0" max="200" step="0.5" onchange="updateCurrentLayer()">
                             </label>
 
                             <label>
@@ -290,37 +294,37 @@
                             </button>
                         </div>
                         <!--<label>
-                        Animation Type:
-                        <select id="layerAnimType" onchange="updateCurrentLayer()">
-                            <option value="rotate">Rotate</option>-->
+                Animation Type:
+                <select id="layerAnimType" onchange="updateCurrentLayer()">
+                    <option value="rotate">Rotate</option>-->
                         <!--<option value="pulse">Pulse</option>-->
                         <!--<option value="hue">Hue Shift</option>
-                        <option value="slide">Slide Gradient</option>-->
+                <option value="slide">Slide Gradient</option>-->
                         <!--<option value="morph">Morph Gradient</option>-->
                         <!--</select>
-                        </label>-->
+                </label>-->
                         <!--<label id="layerClockBlock">
-                            Clockwise:
-                            <input type="checkbox" id="layerClockwise" onchange="updateCurrentLayer()" checked>
-                        </label>
+                    Clockwise:
+                    <input type="checkbox" id="layerClockwise" onchange="updateCurrentLayer()" checked>
+                </label>
 
-                        <label id="layerDurationBlock">
-                            Duration (s):
-                            <input type="number" id="layerDuration" min="1" max="60" step="0.5" onchange="updateCurrentLayer()">
-                        </label>
-                        </div>
+                <label id="layerDurationBlock">
+                    Duration (s):
+                    <input type="number" id="layerDuration" min="1" max="60" step="0.5" onchange="updateCurrentLayer()">
+                </label>
+                </div>
 
-                        <div>
-                            <button onclick="toggleVisibility()">Show/Hide Layer</button>
-                            <button onclick="deleteLayer()">Delete Layer</button>
-                        </div>-->
+                <div>
+                    <button onclick="toggleVisibility()">Show/Hide Layer</button>
+                    <button onclick="deleteLayer()">Delete Layer</button>
+                </div>-->
 
 
                     </div>
 
 
                     <div id="animate-block">
-                        <div class="animation-controls">
+                        <div class="animation-controls color-controls">
 
                             <div class="color-controls hidden">
                                 <h4>Color Stops</h4>
@@ -405,7 +409,7 @@
 
                                     <div class="color-meta">
                                         <div class="field"><label>HEX</label><input type="text" id="hexInput" onchange="changeColorStopHex()" /></div>
-                                        <div class="field"><label>RGBA</label><input type="text" id="rgaInput" onchange="changeColorStopHex()" /></div>
+                                        <div class="field"><label>RGBA</label><input type="text" id="rgbaInput" onchange="changeColorStopRgba()" /></div>
                                         <div class="field"><label>R</label><input type="number" id="rInput" onchange="changeColorStopHex()" /></div>
                                         <div class="field"><label>G</label><input type="number" id="gInput" onchange="changeColorStopHex()" /></div>
                                         <div class="field"><label>B</label><input type="number" id="bInput" onchange="changeColorStopHex()" /></div>
@@ -416,7 +420,7 @@
 
                                 <div class="layer-controls">
                                     <button onclick="addColorStop()">+ Add Stop</button>
-                                    <button onclick="removeColorStop()">- Remove Stop</button>
+                                    <button onclick="removeColorStop()">- Remove Stop</button>     
                                 </div>
                             </div>
                         </div>
@@ -428,6 +432,9 @@
                 <!--<canvas id="gradientCanvas"></canvas>-->
 
             </div>
+
+
+            
         </div>
 
         <script src="./scripts/curveutils.js"></script>
