--- a/index.html
+++ b/index.html
@@ -222,28 +222,6 @@
                                 </select>
                             </label>
 
-                            <label>
-                                Add Clipping:
-                                <input type="checkbox" id="doclip" onchange="updateCurrentLayer()" />
-                                Clip Shape:
-                                <select id="clipshape" onchange="updateCurrentLayer();">
-                                    <option value="triangle">Triangle</option>
-                                    <option value="hexagon">Hexagon</option>
-                                    <option value="star">Star</option>
-                                    <!--<option value="blob">Blob</option>-->
-                                    <!--<option value="custom">Custom</option>-->
-                                </select>
-                                <!--Clip Units:
-                                <select id="clipunit" onchange="updateCurrentLayer();">
-                                    <option value="percent">Percent</option>
-                                    <option value="px">Pixel</option>
-                                    <option value="rem">rem</option>
-                                    <option value="vw">vw</option>
-                                    <option value="vh">vh</option>
-                                </select>-->
-                            </label>
-
-                            <div id="dynamicClippingInputs"></div>
 
                             <div id="dynamicInputs"></div>
 
@@ -287,8 +265,45 @@
                                     </div>
                                 </span>
                             </label>
+                            <label>
+                                <input type="checkbox" id="doclip" onchange="updateCurrentLayer()" />
+                                Add Clipping
+                                <span class="tooltip-icon" tabindex="0">
+                                    <div class="layer-container">
+                                        <div class="layer-header">
+                                            <div class="info-icon">
+                                                i
+                                                <div class="tooltip-card">
+                                                    <h3>Clipping Layers</h3>
+                                                    <div class="tooltip-item">
+                                                        <div><span>Another means of changing the shape of a layer</span></div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </span>
+                                Clip Shape:
+                                <select id="clipshape" onchange="updateCurrentLayer();">
+                                    <option value="triangle">Triangle</option>
+                                    <option value="hexagon">Hexagon</option>
+                                    <option value="star">Star</option>
+                                    <!--<option value="blob">Blob</option>-->
+                                    <!--<option value="custom">Custom</option>-->
+                                </select>
+                                <!--Clip Units:
+    <select id="clipunit" onchange="updateCurrentLayer();">
+        <option value="percent">Percent</option>
+        <option value="px">Pixel</option>
+        <option value="rem">rem</option>
+        <option value="vw">vw</option>
+        <option value="vh">vh</option>
+    </select>-->
+                            </label>
 
-                        </div>
+                        <div id="dynamicClippingInputs"></div>
+
+                    </div>
                     </div>
                     
                     <div id="animate-block" class="">
