--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
                                     <div class="tooltip-card">
                                         <div class="tooltip-item">
                                             <div><span>Copies a sharable link to your clipboard that will navigate to the exported gradient</span></div>
+                                            <div><span>May not work with larger (more layered) gradients.</span></div>
                                         </div>
                                     </div>
                                 </div>
