--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 
             <div class="layer-controls preview-actions">
                 <details id="randomizerSettingsPanel" class="animated-border-box">
-                    <summary class="random-summary">🎲 Randomizer Settings</summary>
+                    <summary class="random-summary">🎲 Randomizer Settings 					                        <button onclick="generateRandomGradientFromSettings()" style="margin-left: 0.5rem; margin-bottom: 0.5rem; background: linear-gradient( 90deg, rgba(255, 0, 204, 0.5), rgba(51, 51, 255, 0.5), rgba(0, 255, 238, 0.5), rgba(255, 204, 0, 0.49), rgba(255, 0, 204, 0.5) ); ">🎲 Generate Gradient</button>
+</summary>
+
                     <div class="randomizer-settings">
                         <hr />
                         <label>
@@ -107,7 +109,6 @@
                             <input type="number" id="randBlurMax" value="200" step="0.5">
                         </label>
                         <hr />
-                        <button onclick="generateRandomGradientFromSettings()" style="margin-left: 0.5rem; margin-bottom: 0.5rem; background: linear-gradient( 90deg, rgba(255, 0, 204, 0.5), rgba(51, 51, 255, 0.5), rgba(0, 255, 238, 0.5), rgba(255, 204, 0, 0.49), rgba(255, 0, 204, 0.5) ); ">🎲 Generate Gradient</button>
                     </div>
                 </details>
             </div>
